correction collapse (taille police version mobile)

--- a/src/style/collapse.scss
+++ b/src/style/collapse.scss
@@ -21,6 +21,7 @@ $text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 
     @media (max-width: 767.98px) {
     padding: 0;
+    height: 300px;
     }
 
     h1 {
@@ -78,7 +79,7 @@ $text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
       font-size: 32px;
 
       @media (max-width: 767.98px) {
-        font-size: 12px;
+        font-size: 8px;
         }
 
         &.collapsed {
@@ -113,7 +114,13 @@ $text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
         padding: 5px 0 5px 10px;
         font-size: 18px;
         width: 95%;
-      }
+        @media (max-width: 767.98px) {
+          font-size: 14px;
+          width: 90%;
+          }
+
+        }
+      
       
       &.expanded {
         max-height: 700px;
@@ -125,8 +132,8 @@ $text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
                   width: 90%;
                   }
             }
-             
-    }
+                 
+   }        
 }
 
 
